# HideAndScript

./: .gitignore  HideAndScript.cabal  README.md  package.yaml  stack.yaml
.github/workflows/: autobuild-workflow.yaml
app/: Main.hs
src/: PythonInterop.hs  StreamHider.hs  Utils.hs
src/GUI/: FolderPrompt.hs  ImagePrompt.hs  MessageBox.hs  PythonPrompt.hs
src/ImgCrypto/: CryptoFile.hs  Curve25519.hs  HMAC.hs  XSalsa.hs
src/PNG/: Chunks.hs  Constants.hs  Container.hs
